src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

.main-bg-dark {
  background-color: #171717;

  background-image: radial-gradient(
      circle at top right,
      rgba(33, 163, 211, 0.15) 0%,
      transparent 50%
    ),
    radial-gradient(
      circle at bottom center,
      rgba(33, 92, 211, 0.15) 0%,
      transparent 80%
    ),
    radial-gradient(#171717 65%, transparent),
    linear-gradient(#ffffff34 1px, transparent 1px),
    linear-gradient(to right, #ffffff34 1px, transparent 1px);
  background-position: 0 0, 0 0, 0 0, 0 3rem, 0 3rem;
  background-attachment: fixed, fixed, fixed, fixed, fixed;
}
.main-bg-light {
  background-color: #ffffff;

  background-image: radial-gradient(
      circle at top right,
      rgba(33, 163, 211, 0.25) 0%,
      transparent 50%
    ),
    radial-gradient(
      circle at bottom center,
      rgba(33, 92, 211, 0.25) 0%,
      transparent 80%
    ),
    radial-gradient(#ffffff 65%, transparent),
    linear-gradient(#39475b71 1px, transparent 1px),
    linear-gradient(to right, #39475b71 1px, transparent 1px);
  background-attachment: fixed, fixed, fixed, fixed, fixed;
}

.card-gradient-bg-dark {
  background: radial-gradient(
      circle at top right,
      rgba(33, 163, 211, 0.15) 0%,
      transparent 50%
    ),
    radial-gradient(
      circle at bottom center,
      rgba(33, 92, 211, 0.157) 0%,
      transparent 80%
    ),
    #1f232b;
  border: 1px solid #3c3c3c;
}
.card-gradient-bg-light {
  background: radial-gradient(
      circle at top right,
      rgba(33, 163, 211, 0.1) 0%,
      transparent 50%
    ),
    radial-gradient(
      circle at bottom center,
      rgba(33, 92, 211, 0.1) 0%,
      transparent 80%
    ),
    #ffffff;
  border: 1px solid #b9b9b9;
}

.primary-bg {
  background-image: linear-gradient(to top right, #3f6394, #2dbfe0);
}

@supports (scrollbar-color: auto) {
  .custom-scrollbar {
    scrollbar-color: #33a1c7 rgba(0, 0, 0, 0.3);
  }
}

@supports selector(::-webkit-scrollbar) {
  .custom-scrollbar {
    scrollbar-color: auto !important;
  }
  .custom-scrollbar::-webkit-scrollbar {
    background: rgba(0, 0, 0, 0.3);
    border-radius: 100px;
    width: 0.5rem;
  }
  .custom-scrollbar::-webkit-scrollbar-thumb {
    background: linear-gradient(to top right, #3f6394, #2dbfe0) !important;
    border-radius: 100px;
  }
}

